--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -1,18 +1,17 @@
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
-
+    android:layout_height="match_parent">
     <TextView
         android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:padding="24dp"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
         android:orientation="horizontal">
 
         <Button
@@ -28,19 +27,13 @@
     </LinearLayout>
 <LinearLayout
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
-    <Button
-        android:id="@+id/cheat_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:text="@string/cheat_button" />
-
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom|right">
     <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="right"
         android:drawableLeft="@drawable/arrow_left"
         android:drawablePadding="4dp"
         android:text="@string/previos_button"
@@ -55,4 +48,4 @@
         android:drawableRight="@drawable/arrow_right"
         android:drawablePadding="4dp"/>
     </LinearLayout>
-</LinearLayout>
+</FrameLayout>
